syntax = "proto3";
package mmp.im.common.protocol;
option java_outer_classname = "ProtobufMessage";

// 心跳
message Heartbeat {
}

//
message Acknowledge {
    int64 ack = 1;
}

// 好友消息
message FriendMessage {
    int64 seq = 1;
    int64 seqId = 2;
    string from = 3;
    string to = 4;
    string type = 5;
    string content = 6;
}

// 群消息
message GroupMessage {
    int64 seq = 1;
    int64 seqId = 2;
    string from = 3;
    string to = 4;
    string type = 5;
    string content = 6;
    // 仅用于转发
    repeated string broadcastIdList = 7;
}

//
message ServerRegister {
    int64 seq = 1;
    string severId = 2;
    string token = 3;
    Type type = 4;
    enum Type {
        TCP = 0;
        WEBSOCKET = 1;

    }
}

//
message ClientLogin {
    int64 seq = 1;
    string userId = 2;
    string token = 3;
    string clientInfo = 4;
}

message ClientLogout {
    int64 seq = 1;
    string userId = 2;
    string token = 3;
    string clientInfo = 4;
}

// 在线状态
message ClientStatus {
    int64 seq = 1;
    string userId = 2;
    string serverId = 3;
    bool status = 4;
    string clientInfo = 5;
    // 仅用于转发
    repeated string broadcastIdList = 6;
}

// 已读
message ReadMessage {
    string from = 1;
    string to = 2;

    int64 seqId = 3;

    Type type = 4;
    enum Type {
        FRIEND = 0;
        GROUP = 1;

    }

}

// 正在输入
message Inputting {
    string from = 1;
    string to = 2;
}

// 发起好友申请，废弃，使用HTTP
message ApplyFriend {
    int64 seq = 1;
    string from = 2;
    string to = 3;
}

// ...
